--- a/to-do-list/assets/styles.css
+++ b/to-do-list/assets/styles.css
@@ -106,7 +106,7 @@ button {
 }
 
 #entrada {
-  width: 60%;
+  width: 65%;
   padding: 5px 15px;
   border-radius: 20px 0 0 0;
 }
@@ -133,12 +133,45 @@ button:active {
 }
 
 #listaTarefas {
-  font-size: 18pt;
   height: auto;
   width: auto;
   margin: 2rem 4rem;
-  padding: 1rem 3rem;
   position: relative;
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.linha-tarefa {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.icone-apagar {
+  background-image: url('https://img.icons8.com/material-outlined/24/737373/delete-sign.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.icone-apagar:hover {
+  background-image: url('https://img.icons8.com/ios-glyphs/30/dd2121/delete-sign.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 20px;
+  width: 20px;
+}
+
+.icone-apagar, .tarefa {
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .tarefa {
@@ -147,9 +180,10 @@ button:active {
 }
 
 label {
-  margin-left: 10px;
   word-break: break-word;
-  white-space: wrap;
+  font-size: 18pt;
+  line-height: 18pt;
+  width: 100%;
 }
 
 .tarefa:checked+label {
