--- a/to-do-list/assets/styles.css
+++ b/to-do-list/assets/styles.css
@@ -11,6 +11,7 @@
 body,
 main {
   width: 100%;
+  height: 100%;
 }
 
 body {
@@ -48,7 +49,7 @@ h2 {
   margin: 2rem 0;
 }
 
-h1 {
+#titulo-coluna-1 {
   font-size: 30pt;
 }
 
@@ -74,11 +75,13 @@ p {
 
 #msgSecreta {
   text-align: center;
-  margin: 2rem 2rem;
+  margin: 2rem 3rem;
   width: auto;
   color: #000;
   opacity: 0;
   transition: 0.5s;
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 16pt;
 }
 
 #msgSecreta:hover {
@@ -90,6 +93,10 @@ p {
   background: #fddf84;
 }
 
+#titulo-coluna-2 {
+  font-size: 20pt;
+}
+
 #criadorTarefas {
   display: flex;
   align-items: center;
@@ -99,7 +106,7 @@ p {
 
 #entrada,
 button {
-  height: 6vh;
+  height: 7vh;
   border: none;
   font-size: 18pt;
   margin: 0;
@@ -204,7 +211,7 @@ footer {
   position: relative;
 }
 
-@media (max-width: 912px) {
+@media (max-width: 980px) {
   .linha {
     flex-direction: column;
   }
@@ -214,14 +221,17 @@ footer {
     width: 100%;
   }
 
-  h1 {
-    font-size: 24pt;
-    margin: 1rem 0;
-    padding: 1rem;
+  #titulo-coluna-1 {
+    font-size: 25pt;
+    margin: 1rem auto;
+    /* padding: 1rem; */
+    text-align: center;
+    width: 100%;
   }
 
   .instrucoes {
     font-size: 15pt;
+    padding: 1rem 2rem;
   }
 
   #msgSecreta {
@@ -234,8 +244,12 @@ footer {
     opacity: 1;
   }
 
-  h2 {
-    margin: 1rem 0;
+  ul {
+    margin: 1rem 0 0 2rem;
+  }
+
+  #titulo-coluna-2 {
+    margin: 1rem auto;
   }
 
   #entrada,
@@ -257,5 +271,9 @@ footer {
     margin: 1rem 2rem;
     padding: 1rem;
     position: relative;
+  }
+
+  .icone-apagar {
+    background-image: url('https://img.icons8.com/ios-glyphs/30/dd2121/delete-sign.png');
   }
 }
